--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
    </head>
    <body>
       <nav>
-         <img id="logo"src="/assets/images/logo3.png" alt="Logo">
+         <img id="logo"src="assets/images/logo3.png" alt="Logo">
       </nav>
       <main>
          <div class="mainContainer">
