--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Chun Cheung Dictionary</title>
-      <link rel="stylesheet" href="assets/css/style.css">
+      <link rel="stylesheet" href="/assets/css/style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
    </head>
    <body>
       <nav>
-         <img id="logo"src="assets/images/logo3.png" alt="Logo">
+         <img id="logo"src="/assets/images/logo3.png" alt="Logo">
       </nav>
       <main>
          <div class="mainContainer">
@@ -25,6 +25,6 @@
       <footer>
          <p class="footerText">© 2025 Dictionary by Chun Cheung</p>
       </footer>
-      <script src="assets/js/main.js"></script>
+      <script src="/assets/js/main.js"></script>
    </body>
 </html>
